# afids-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: release.yml
.github/workflows/: assign_reviewers.yml  bump_version.yml  release.yml  test.yml
afids_utils/: __init__.py  afids.py  exceptions.py  io.py  metrics.py  plotting.py  transforms.py
afids_utils/ext/: fcsv.py  json.py
afids_utils/features/: regRF.py  reg_rf.py
afids_utils/io/: io.py
afids_utils/resources/: afids_descs.json  template.fcsv  template.json
afids_utils/tests/: helpers.py  strategies.py  test_afids.py  test_ext.py  test_io.py  test_metrics.py  test_plotting.py  test_regRF.py  test_reg_rf.py  test_transforms.py
afids_utils/tests/data/: tpl-MNI152NLin2009cAsym_afids.json
docs/: conf.py  index.md  requirements.txt
docs/api/: afids.md  io.md  main.md  metrics.md  plotting.md  transform.md
docs/exceptions/: exceptions.md
docs/general/: main.md
typings/matplotlib/: _internal_utils.pyi  _mathtext.pyi  _type1font.pyi  afm.pyi  animation.pyi  artist.pyi  axis.pyi  colors.pyi  dates.pyi  docstring.pyi  figure.pyi  fontconfig_pattern.pyi  image.pyi  legend.pyi  legend_handler.pyi  offsetbox.pyi  patches.pyi  pylab.pyi  rcsetup.pyi  sankey.pyi  scale.pyi  ticker.pyi  tight_bbox.pyi  tight_layout.pyi  transforms.pyi  type1font.pyi
typings/matplotlib/axes/: _base.pyi
typings/matplotlib/cbook/: __init__.pyi
typings/matplotlib/projections/: polar.pyi
typings/matplotlib/testing/: __init__.pyi
typings/matplotlib/tests/: __init__.pyi
typings/nilearn/: __init__.pyi  _version.pyi  conftest.pyi  masking.pyi  signal.pyi
typings/nilearn/_utils/: __init__.pyi  cache_mixin.pyi  class_inspect.pyi  docs.pyi  exceptions.pyi  extmath.pyi  fmriprep_confounds.pyi  helpers.pyi  logger.pyi  ndimage.pyi  niimg.pyi  niimg_conversions.pyi  numpy_conversions.pyi  param_validation.pyi  path_finding.pyi  segmentation.pyi  testing.pyi
typings/nilearn/connectome/: __init__.pyi  connectivity_matrices.pyi  group_sparse_cov.pyi
typings/nilearn/datasets/: __init__.pyi  _testing.pyi  atlas.pyi  func.pyi  neurovault.pyi  struct.pyi  utils.pyi
typings/nilearn/decoding/: __init__.pyi  decoder.pyi  fista.pyi  objective_functions.pyi  proximal_operators.pyi  searchlight.pyi  space_net.pyi  space_net_solvers.pyi
typings/nilearn/decomposition/: __init__.pyi  _base.pyi  _multi_pca.pyi  canica.pyi  dict_learning.pyi
typings/nilearn/experimental/: __init__.pyi
typings/nilearn/glm/: __init__.pyi  _base.pyi  _utils.pyi  contrasts.pyi  model.pyi  regression.pyi  thresholding.pyi
typings/nilearn/glm/first_level/: __init__.pyi  design_matrix.pyi  experimental_paradigm.pyi  first_level.pyi  hemodynamic_models.pyi
typings/nilearn/image/: __init__.pyi  image.pyi  resampling.pyi
typings/nilearn/input_data/: __init__.pyi  base_masker.pyi  multi_nifti_masker.pyi  nifti_labels_masker.pyi  nifti_maps_masker.pyi  nifti_masker.pyi  nifti_spheres_masker.pyi
typings/nilearn/interfaces/: __init__.pyi  fsl.pyi
typings/nilearn/maskers/: __init__.pyi  base_masker.pyi  multi_nifti_labels_masker.pyi  multi_nifti_maps_masker.pyi  multi_nifti_masker.pyi  nifti_labels_masker.pyi  nifti_maps_masker.pyi  nifti_masker.pyi  nifti_spheres_masker.pyi
typings/nilearn/mass_univariate/: __init__.pyi  _utils.pyi  permuted_least_squares.pyi
typings/nilearn/plotting/: __init__.pyi  cm.pyi  edge_detect.pyi  find_cuts.pyi  glass_brain.pyi  html_connectome.pyi  html_document.pyi  html_stat_map.pyi  html_surface.pyi  img_plotting.pyi  js_plotting_utils.pyi  matrix_plotting.pyi  surf_plotting.pyi
typings/nilearn/regions/: __init__.pyi  hierarchical_kmeans_clustering.pyi  parcellations.pyi  region_extractor.pyi  rena_clustering.pyi  signal_extraction.pyi
typings/nilearn/reporting/: __init__.pyi  _get_clusters_table.pyi  glm_reporter.pyi  html_report.pyi  utils.pyi
typings/nilearn/surface/: __init__.pyi  surface.pyi
typings/plotly/: __init__.pyi  _subplots.pyi  basedatatypes.pyi  basewidget.pyi  shapeannotation.pyi  subplots.pyi  tools.pyi  utils.pyi  version.pyi
typings/plotly/colors/: __init__.pyi
typings/plotly/data/: __init__.pyi
typings/plotly/express/: __init__.pyi  _core.pyi  _special_inputs.pyi  imshow_utils.pyi
typings/plotly/figure_factory/: _2d_density.pyi  __init__.pyi  _annotated_heatmap.pyi  _candlestick.pyi  _dendrogram.pyi  _gantt.pyi  _ohlc.pyi  _quiver.pyi  _scatterplot.pyi  _streamline.pyi  _table.pyi  _trisurf.pyi  utils.pyi
typings/plotly/graph_objs/: _bar.pyi  _barpolar.pyi  _box.pyi  _candlestick.pyi  _carpet.pyi  _choropleth.pyi  _choroplethmapbox.pyi  _cone.pyi  _contour.pyi  _contourcarpet.pyi  _densitymapbox.pyi  _figure.pyi  _figurewidget.pyi  _frame.pyi  _funnel.pyi  _funnelarea.pyi  _heatmap.pyi  _heatmapgl.pyi  _histogram.pyi  _histogram2d.pyi  _histogram2dcontour.pyi  _icicle.pyi  _image.pyi  _indicator.pyi  _isosurface.pyi  _layout.pyi  _mesh3d.pyi  _ohlc.pyi  _parcats.pyi  _parcoords.pyi  _pie.pyi  _pointcloud.pyi  _sankey.pyi  _scatter.pyi  _scatter3d.pyi  _scattercarpet.pyi  _scattergeo.pyi  _scattergl.pyi  _scattermapbox.pyi  _scatterpolar.pyi  (+12 more)
typings/plotly/io/: _base_renderers.pyi  _orca.pyi  _renderers.pyi  _templates.pyi  _utils.pyi
typings/plotly/matplotlylib/: __init__.pyi  mpltools.pyi
typings/plotly/offline/: offline.pyi
typings/plotly/plotly/: __init__.pyi
(+994 files in other folders)
